include/joltc.h

typedef uint32_t JPH_BodyID;
typedef uint32_t JPH_SubShapeID;
typedef enum JPH_BodyType {
	JPH_BodyType_Rigid = 0,
	JPH_BodyType_Soft = 1,

	_JPH_BodyType_Count,
	_JPH_BodyType_Force32 = 0x7fffffff
} JPH_BodyType;
typedef enum JPH_ShapeType {
	JPH_ShapeType_Convex = 0,
	JPH_ShapeType_Compound = 1,
	JPH_ShapeType_Decorated = 2,
	JPH_ShapeType_Mesh = 3,
	JPH_ShapeType_HeightField = 4,
	JPH_ShapeType_SoftBody = 5,

	JPH_ShapeType_User1 = 6,
	JPH_ShapeType_User2 = 7,
	JPH_ShapeType_User3 = 8,
	JPH_ShapeType_User4 = 9,

	_JPH_ShapeType_Count,
	_JPH_ShapeType_Force32 = 0x7fffffff
} JPH_ShapeType;
typedef enum JPH_ShapeSubType {
	JPH_ShapeSubType_Sphere = 0,
	JPH_ShapeSubType_Box = 1,
	JPH_ShapeSubType_Triangle = 2,
	JPH_ShapeSubType_Capsule = 3,
	JPH_ShapeSubType_TaperedCapsule = 4,
	JPH_ShapeSubType_Cylinder = 5,
	JPH_ShapeSubType_ConvexHull = 6,
	JPH_ShapeSubType_StaticCompound = 7,
	JPH_ShapeSubType_MutableCompound = 8,
	JPH_ShapeSubType_RotatedTranslated = 9,
	JPH_ShapeSubType_Scaled = 10,
	JPH_ShapeSubType_OffsetCenterOfMass = 11,
	JPH_ShapeSubType_Mesh = 12,
	JPH_ShapeSubType_HeightField = 13,
	JPH_ShapeSubType_SoftBody = 14,

	_JPH_ShapeSubType_Count,
	_JPH_ShapeSubType_Force32 = 0x7fffffff
} JPH_ShapeSubType;
/// Defines how to color soft body constraints
typedef enum JPH_SoftBodyConstraintColor
{
	JPH_SoftBodyConstraintColor_ConstraintType,				/// Draw different types of constraints in different colors
	JPH_SoftBodyConstraintColor_ConstraintGroup,			/// Draw constraints in the same group in the same color, non-parallel group will be red
	JPH_SoftBodyConstraintColor_ConstraintOrder,			/// Draw constraints in the same group in the same color, non-parallel group will be red, and order within each group will be indicated with gradient

	_JPH_SoftBodyConstraintColor_Count,
	_JPH_SoftBodyConstraintColor_Force32 = 0x7FFFFFFF
} JPH_SoftBodyConstraintColor;
typedef enum JPH_BodyManager_ShapeColor
{
	JPH_BodyManager_ShapeColor_InstanceColor,				///< Random color per instance
	JPH_BodyManager_ShapeColor_ShapeTypeColor,				///< Convex = green, scaled = yellow, compound = orange, mesh = red
	JPH_BodyManager_ShapeColor_MotionTypeColor,			///< Static = grey, keyframed = green, dynamic = random color per instance
	JPH_BodyManager_ShapeColor_SleepColor,					///< Static = grey, keyframed = green, dynamic = yellow, sleeping = red
	JPH_BodyManager_ShapeColor_IslandColor,				///< Static = grey, active = random color per island, sleeping = light grey
	JPH_BodyManager_ShapeColor_MaterialColor,				///< Color as defined by the PhysicsMaterial of the shape

	_JPH_BodyManager_ShapeColor_Count,
	_JPH_BodyManager_ShapeColor_Force32 = 0x7FFFFFFF
} JPH_BodyManager_ShapeColor;
typedef struct JPH_Vec3 {
	float x;
	float y;
	float z;
} JPH_Vec3;
typedef struct JPH_Quat {
	float x;
	float y;
	float z;
	float w;
} JPH_Quat;
typedef struct JPH_Matrix4x4 {
	float m11, m12, m13, m14;
	float m21, m22, m23, m24;
	float m31, m32, m33, m34;
	float m41, m42, m43, m44;
} JPH_Matrix4x4;
typedef struct JPH_RMatrix4x4 {
	float m11, m12, m13, m14;
	float m21, m22, m23, m24;
	float m31, m32, m33, m34;
	double m41, m42, m43, m44;
} JPH_RMatrix4x4;
typedef JPH_Matrix4x4 JPH_RMatrix4x4;
typedef struct JPH_AABox {
	JPH_Vec3 min;
	JPH_Vec3 max;
} JPH_AABox;
typedef struct JPH_MassProperties {
	float mass;
	JPH_Matrix4x4 inertia;
} JPH_MassProperties;
typedef struct JPH_DrawSettings
{
	bool					drawGetSupportFunction;				///< Draw the GetSupport() function, used for convex collision detection
	bool					drawSupportDirection;				///< When drawing the support function, also draw which direction mapped to a specific support point
	bool					drawGetSupportingFace;				///< Draw the faces that were found colliding during collision detection
	bool					drawShape;							///< Draw the shapes of all bodies
	bool					drawShapeWireframe;					///< When mDrawShape is true and this is true, the shapes will be drawn in wireframe instead of solid.
	JPH_BodyManager_ShapeColor	drawShapeColor;                     ///< Coloring scheme to use for shapes
	bool					drawBoundingBox;					///< Draw a bounding box per body
	bool					drawCenterOfMassTransform;			///< Draw the center of mass for each body
	bool					drawWorldTransform;					///< Draw the world transform (which can be different than the center of mass) for each body
	bool					drawVelocity;						///< Draw the velocity vector for each body
	bool					drawMassAndInertia;					///< Draw the mass and inertia (as the box equivalent) for each body
	bool					drawSleepStats;						///< Draw stats regarding the sleeping algorithm of each body
	bool					drawSoftBodyVertices;				///< Draw the vertices of soft bodies
	bool					drawSoftBodyVertexVelocities;		///< Draw the velocities of the vertices of soft bodies
	bool					drawSoftBodyEdgeConstraints;		///< Draw the edge constraints of soft bodies
	bool					drawSoftBodyBendConstraints;		///< Draw the bend constraints of soft bodies
	bool					drawSoftBodyVolumeConstraints;		///< Draw the volume constraints of soft bodies
	bool					drawSoftBodySkinConstraints;		///< Draw the skin constraints of soft bodies
	bool					drawSoftBodyLRAConstraints;	        ///< Draw the LRA constraints of soft bodies
	bool					drawSoftBodyPredictedBounds;		///< Draw the predicted bounds of soft bodies
	JPH_SoftBodyConstraintColor	drawSoftBodyConstraintColor;        ///< Coloring scheme to use for soft body constraints
} JPH_DrawSettings;
typedef struct JPH_PhysicsSystem                    JPH_PhysicsSystem;
typedef struct JPH_PhysicsMaterial					JPH_PhysicsMaterial;
typedef struct JPH_ShapeSettings                    JPH_ShapeSettings;
typedef struct JPH_Shape                            JPH_Shape;
typedef struct JPH_BodyInterface                    JPH_BodyInterface;
typedef struct JPH_BodyLockInterface                JPH_BodyLockInterface;
typedef struct JPH_BroadPhaseQuery                  JPH_BroadPhaseQuery;
typedef struct JPH_NarrowPhaseQuery                 JPH_NarrowPhaseQuery;
typedef struct JPH_MassProperties                   JPH_MassProperties;
typedef struct JPH_Constraint                       JPH_Constraint;
typedef struct JPH_ContactListener                  JPH_ContactListener;
typedef struct JPH_BodyActivationListener           JPH_BodyActivationListener;
typedef struct JPH_BodyDrawFilter                   JPH_BodyDrawFilter;
typedef struct JPH_DebugRenderer                    JPH_DebugRenderer;
JPH_CAPI JPH_BodyInterface* JPH_PhysicsSystem_GetBodyInterfaceNoLock(JPH_PhysicsSystem* system);
JPH_CAPI const JPH_BodyLockInterface* JPH_PhysicsSystem_GetBodyLockInterface(const JPH_PhysicsSystem* system);
JPH_CAPI const JPH_BodyLockInterface* JPH_PhysicsSystem_GetBodyLockInterfaceNoLock(const JPH_PhysicsSystem* system);
JPH_CAPI const JPH_BroadPhaseQuery* JPH_PhysicsSystem_GetBroadPhaseQuery(const JPH_PhysicsSystem* system);
JPH_CAPI const JPH_NarrowPhaseQuery* JPH_PhysicsSystem_GetNarrowPhaseQuery(const JPH_PhysicsSystem* system);
JPH_CAPI const JPH_NarrowPhaseQuery* JPH_PhysicsSystem_GetNarrowPhaseQueryNoLock(const JPH_PhysicsSystem* system);
JPH_CAPI void JPH_PhysicsSystem_SetContactListener(JPH_PhysicsSystem* system, JPH_ContactListener* listener);
JPH_CAPI void JPH_PhysicsSystem_SetBodyActivationListener(JPH_PhysicsSystem* system, JPH_BodyActivationListener* listener);
JPH_CAPI bool JPH_PhysicsSystem_WereBodiesInContact(const JPH_PhysicsSystem* system, JPH_BodyID body1, JPH_BodyID body2);
JPH_CAPI uint32_t JPH_PhysicsSystem_GetNumBodies(const JPH_PhysicsSystem* system);
JPH_CAPI uint32_t JPH_PhysicsSystem_GetNumActiveBodies(const JPH_PhysicsSystem* system, JPH_BodyType type);
JPH_CAPI uint32_t JPH_PhysicsSystem_GetMaxBodies(const JPH_PhysicsSystem* system);
JPH_CAPI uint32_t JPH_PhysicsSystem_GetNumConstraints(const JPH_PhysicsSystem* system);
JPH_CAPI void JPH_PhysicsSystem_SetGravity(JPH_PhysicsSystem* system, const JPH_Vec3* value);
JPH_CAPI void JPH_PhysicsSystem_GetGravity(JPH_PhysicsSystem* system, JPH_Vec3* result);
JPH_CAPI void JPH_PhysicsSystem_AddConstraint(JPH_PhysicsSystem* system, JPH_Constraint* constraint);
JPH_CAPI void JPH_PhysicsSystem_RemoveConstraint(JPH_PhysicsSystem* system, JPH_Constraint* constraint);
JPH_CAPI void JPH_PhysicsSystem_AddConstraints(JPH_PhysicsSystem* system, JPH_Constraint** constraints, uint32_t count);
JPH_CAPI void JPH_PhysicsSystem_RemoveConstraints(JPH_PhysicsSystem* system, JPH_Constraint** constraints, uint32_t count);
JPH_CAPI void JPH_PhysicsSystem_GetBodies(const JPH_PhysicsSystem* system, JPH_BodyID* ids, uint32_t count);
JPH_CAPI void JPH_PhysicsSystem_GetConstraints(const JPH_PhysicsSystem* system, const JPH_Constraint** constraints, uint32_t count);
JPH_CAPI void JPH_PhysicsSystem_DrawBodies(JPH_PhysicsSystem* system, const JPH_DrawSettings* settings, JPH_DebugRenderer* renderer, const JPH_BodyDrawFilter* bodyFilter /* = nullptr */);
JPH_CAPI void JPH_PhysicsSystem_DrawConstraints(JPH_PhysicsSystem* system, JPH_DebugRenderer* renderer);
JPH_CAPI void JPH_PhysicsSystem_DrawConstraintLimits(JPH_PhysicsSystem* system, JPH_DebugRenderer* renderer);
JPH_CAPI void JPH_PhysicsSystem_DrawConstraintReferenceFrame(JPH_PhysicsSystem* system, JPH_DebugRenderer* renderer);
/* Math */
JPH_CAPI void JPH_Quaternion_FromTo(const JPH_Vec3* from, const JPH_Vec3* to, JPH_Quat* quat);
/* Material */
JPH_CAPI JPH_PhysicsMaterial* JPH_PhysicsMaterial_Create(void);
JPH_CAPI void JPH_PhysicsMaterial_Destroy(JPH_PhysicsMaterial* material);
/* ShapeSettings */
JPH_CAPI void JPH_ShapeSettings_Destroy(JPH_ShapeSettings* settings);
JPH_CAPI uint64_t JPH_ShapeSettings_GetUserData(const JPH_ShapeSettings* settings);
JPH_CAPI void JPH_ShapeSettings_SetUserData(JPH_ShapeSettings* settings, uint64_t userData);
/* Shape */
JPH_CAPI void JPH_Shape_Destroy(JPH_Shape* shape);
JPH_CAPI JPH_ShapeType JPH_Shape_GetType(const JPH_Shape* shape);
JPH_CAPI JPH_ShapeSubType JPH_Shape_GetSubType(const JPH_Shape* shape);
JPH_CAPI uint64_t JPH_Shape_GetUserData(const JPH_Shape* shape);
JPH_CAPI void JPH_Shape_SetUserData(JPH_Shape* shape, uint64_t userData);
JPH_CAPI bool JPH_Shape_MustBeStatic(const JPH_Shape* shape);
JPH_CAPI void JPH_Shape_GetCenterOfMass(const JPH_Shape* shape, JPH_Vec3* result);
JPH_CAPI void JPH_Shape_GetLocalBounds(const JPH_Shape* shape, JPH_AABox* result);
JPH_CAPI uint32_t JPH_Shape_GetSubShapeIDBitsRecursive(const JPH_Shape* shape);
JPH_CAPI void JPH_Shape_GetWorldSpaceBounds(const JPH_Shape* shape, JPH_RMatrix4x4* centerOfMassTransform, JPH_Vec3* scale, JPH_AABox* result);
JPH_CAPI float JPH_Shape_GetInnerRadius(const JPH_Shape* shape);
JPH_CAPI void JPH_Shape_GetMassProperties(const JPH_Shape* shape, JPH_MassProperties* result);
JPH_CAPI const JPH_Shape* JPH_Shape_GetLeafShape(const JPH_Shape* shape, JPH_SubShapeID subShapeID, JPH_SubShapeID* remainder);
JPH_CAPI const JPH_PhysicsMaterial* JPH_Shape_GetMaterial(const JPH_Shape* shape, JPH_SubShapeID subShapeID);
JPH_CAPI void JPH_Shape_GetSurfaceNormal(const JPH_Shape* shape, JPH_SubShapeID subShapeID, JPH_Vec3* localPosition, JPH_Vec3* normal);