csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetBodyInterfaceNoLock", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyInterface* JPH_PhysicsSystem_GetBodyInterfaceNoLock(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetBodyLockInterface", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyLockInterface* JPH_PhysicsSystem_GetBodyLockInterface(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetBodyLockInterfaceNoLock", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyLockInterface* JPH_PhysicsSystem_GetBodyLockInterfaceNoLock(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetBroadPhaseQuery", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BroadPhaseQuery* JPH_PhysicsSystem_GetBroadPhaseQuery(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetNarrowPhaseQuery", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_NarrowPhaseQuery* JPH_PhysicsSystem_GetNarrowPhaseQuery(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetNarrowPhaseQueryNoLock", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_NarrowPhaseQuery* JPH_PhysicsSystem_GetNarrowPhaseQueryNoLock(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_SetContactListener", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_SetContactListener(JPH_PhysicsSystem* system, JPH_ContactListener* listener);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_SetBodyActivationListener", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_SetBodyActivationListener(JPH_PhysicsSystem* system, JPH_BodyActivationListener* listener);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_WereBodiesInContact", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_PhysicsSystem_WereBodiesInContact(JPH_PhysicsSystem* system, uint body1, uint body2);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetNumBodies", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PhysicsSystem_GetNumBodies(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetNumActiveBodies", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PhysicsSystem_GetNumActiveBodies(JPH_PhysicsSystem* system, uint type_);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetMaxBodies", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PhysicsSystem_GetMaxBodies(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetNumConstraints", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PhysicsSystem_GetNumConstraints(JPH_PhysicsSystem* system);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_SetGravity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_SetGravity(JPH_PhysicsSystem* system, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetGravity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_GetGravity(JPH_PhysicsSystem* system, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_AddConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_AddConstraint(JPH_PhysicsSystem* system, JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_RemoveConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_RemoveConstraint(JPH_PhysicsSystem* system, JPH_Constraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_AddConstraints", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_AddConstraints(JPH_PhysicsSystem* system, JPH_Constraint** constraints, uint count);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_RemoveConstraints", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_RemoveConstraints(JPH_PhysicsSystem* system, JPH_Constraint** constraints, uint count);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetBodies", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_GetBodies(JPH_PhysicsSystem* system, uint* ids, uint count);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_GetConstraints", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_GetConstraints(JPH_PhysicsSystem* system, JPH_Constraint** constraints, uint count);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_DrawBodies", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_DrawBodies(JPH_PhysicsSystem* system, JPH_DrawSettings* settings, JPH_DebugRenderer* renderer, JPH_BodyDrawFilter* bodyFilter);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_DrawConstraints", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_DrawConstraints(JPH_PhysicsSystem* system, JPH_DebugRenderer* renderer);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_DrawConstraintLimits", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_DrawConstraintLimits(JPH_PhysicsSystem* system, JPH_DebugRenderer* renderer);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsSystem_DrawConstraintReferenceFrame", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsSystem_DrawConstraintReferenceFrame(JPH_PhysicsSystem* system, JPH_DebugRenderer* renderer);

        [DllImport(__DllName, EntryPoint = "JPH_Quaternion_FromTo", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Quaternion_FromTo(JPH_Vec3* from, JPH_Vec3* to, JPH_Quat* quat);

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsMaterial_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PhysicsMaterial* JPH_PhysicsMaterial_Create();

        [DllImport(__DllName, EntryPoint = "JPH_PhysicsMaterial_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PhysicsMaterial_Destroy(JPH_PhysicsMaterial* material);

        [DllImport(__DllName, EntryPoint = "JPH_ShapeSettings_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ShapeSettings_Destroy(JPH_ShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ShapeSettings_GetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong JPH_ShapeSettings_GetUserData(JPH_ShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ShapeSettings_SetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ShapeSettings_SetUserData(JPH_ShapeSettings* settings, ulong userData);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_Destroy(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetType", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_Shape_GetType(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetSubType", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_Shape_GetSubType(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ulong JPH_Shape_GetUserData(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_SetUserData", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_SetUserData(JPH_Shape* shape, ulong userData);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_MustBeStatic", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Shape_MustBeStatic(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetCenterOfMass", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_GetCenterOfMass(JPH_Shape* shape, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetLocalBounds", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_GetLocalBounds(JPH_Shape* shape, JPH_AABox* result);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetSubShapeIDBitsRecursive", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_Shape_GetSubShapeIDBitsRecursive(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetWorldSpaceBounds", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_GetWorldSpaceBounds(JPH_Shape* shape, JPH_Matrix4x4* centerOfMassTransform, JPH_Vec3* scale, JPH_AABox* result);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetInnerRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_Shape_GetInnerRadius(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetMassProperties", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_GetMassProperties(JPH_Shape* shape, JPH_MassProperties* result);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetLeafShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_Shape* JPH_Shape_GetLeafShape(JPH_Shape* shape, uint subShapeID, uint* remainder);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetMaterial", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PhysicsMaterial* JPH_Shape_GetMaterial(JPH_Shape* shape, uint subShapeID);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetSurfaceNormal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_Shape_GetSurfaceNormal(JPH_Shape* shape, uint subShapeID, JPH_Vec3* localPosition, JPH_Vec3* normal);
